fix the nav dots align.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,15 +41,18 @@ p {
 /*
     NAV
 */
+.nav {
+    display: flex;
+    align-items: center;
+}
+
 .nav .nav-link {
     color: #4D4D4D;
     position: relative;
-    display: inline-block;
     padding-right: 10px; /* This padding is for the dots */
-    padding-left: 20px; /* Adjust the distance between the dots and links */
+    padding-left: 10px; /* Adjust the distance between the dots and links */
     padding-top: 2px; /* Adjust the padding to align the text and dots */
     padding-bottom: 2px; /* Adjust the padding to align the text and dots */
-    vertical-align: middle; /* Adjust the vertical alignment of the dots */
 }
 
 .nav .dot {
@@ -57,16 +60,14 @@ p {
     height: 6px;
     background-color: #800080;
     border-radius: 50%;
-    vertical-align: middle; /* Adjust the vertical alignment of the dots */
-    top: 0px; /* Adjust the position of the dots */
-    left: -10px; /* Adjust the distance between the dots and links */
-    transform: translateY(-50%);
+    margin-left: 10px; /* Adjust the distance between the dots */
 }
 
 /* Hides the last dot */
 .nav .nav-link:last-child .dot {
     display: none;
 }
+
 
 /*
     IMG
@@ -138,7 +139,6 @@ button {
     width: 125px;
     height: 40px;
     margin-left: 30px;
-    filter: brightness(0.9) invert(1);
 }
 
 /*
